tests/derive-debug/duplicate-derive-debug.stderr
error: encountered duplicate `#[derive(Debug)]` parameter
 --> $DIR/duplicate-derive-debug.rs:4:27
  |
4 | #[derive(Debug)] #[derive(Debug)]
  |                           ^^^^^

error: previous `#[derive(Debug)]` parameter here
 --> $DIR/duplicate-derive-debug.rs:4:10
  |
4 | #[derive(Debug)] #[derive(Debug)]
  |          ^^^^^
